testing netlify cms

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,18 @@
     <title>Siva Swamigal App</title>
   </head>
   <body>
+
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
